- Code cleanup